# CheckMate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
checkmate/: __init__.py  agents.py  board.py  conflicts.py  engine.py  memory.py  messages.py  models.py  runtime.py  tools.py
docs/: NPX.md  architecture.md
examples/: basic_runtime.py
lib/: index.js  plan.js  skill.js
scripts/: build-skill-zip.mjs  run-node-tests.mjs  run-python-tests.mjs
skills/checkmate-agent-system/: SKILL.md
skills/checkmate-agent-system/agents/: openai.yaml
skills/checkmate-agent-system/references/: piece-system.md  schemas.md
skills/checkmate-agent-system/scripts/: checkmate_plan.py
tests/: test_runtime.py
tests/node/: cli.test.js  plan.test.js  skill-script.test.js
