[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "checkmate-agent-system"
version = "0.1.0"
description = "Chess-governed multi-agent planning runtime for Claude Code, Codex, and Python workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "CheckMate contributors" }]
license = { text = "MIT" }
keywords = ["agents", "ai-agents", "agent-framework", "multi-agent", "planning", "orchestration", "prompt-engineering", "checkmate", "claude", "claude-code", "codex", "python"]

[project.urls]
Homepage = "https://github.com/mandosanti06/CheckMate"
Issues = "https://github.com/mandosanti06/CheckMate/issues"

[tool.setuptools.packages.find]
include = ["checkmate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
